--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script language="javascript">
-        alert("Greetings From The Zebu Sanctuary. \n \n  Click OK to Continue")
+        alert("Greetings To All ABers From The Zebu Sanctuary. \n \n  Click OK to Continue")
         </script>
 </head>
 <body>
