--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
               // Attach the "click" event to your button
               button.addEventListener('click', () => {
                 
-                alert('Click OK to Continue Square Count. \n \n Does That Answer Your Question Kuiperbelt?');
+                alert('Click OK to Continue Square Count. \n \n Does This Answer Your Question Kuiperbelt?');
         
               })
              document.body.appendChild(button);
