--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class=" container"
-    <h2>Safe refuge for all lost and stray bovine.</h2>
+    <h2>Safe refuge for all lost and stray ageUK minibus drivers.</h2>
     <a href = "./about.html"><p>Click Here for Chessboard Squares</p></a>
 
 </div>
