--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script language="javascript">
-        alert("Greetings to all ageUK personnel, voulunteers and service users \n \n  Click OK to Continue")
+        alert("Greetings to all ageUK personnel, volunteers and service users \n \n  Click OK to Continue")
         </script>
 </head>
 <body>
