--- a/about.html
+++ b/about.html
@@ -59,6 +59,11 @@
         
               })
              document.body.appendChild(button);
+
+            Sub myAlert(title, content)
+      MsgBox content, 0, title
+End Sub
+myAlert("My custom title", "Some content");
         
         </script>
 </body>
