--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CattleDrive</title>
-    <h1>The Zebu Sanctuary</h1>
+    <h1>The ageUK Bus Shelter</h1>
 </head>
 <body>
     <div class=" container"
