--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>The ageUK Bus Shelter</h1>
 </head>
 <body>
-    <div class=" container"
+    <div class=" container">
     <h2>Safe refuge for all lost and stray ageUK minibus drivers</h2>
     <a href = "./about.html"><p>Click Here for Chessboard Squares</p></a>
 
